<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="user_app_name">module_user</string>

    <string name="user_login">用户登录</string>
    <string name="user_login_tip">请使用WanAndroid账号登录！</string>
    <string name="user_register">注册用户</string>

    <string name="user_username">用户名</string>
    <string name="user_password">密码</string>
    <string name="user_no_account">没有账号？去注册</string>
</resources>